--- a/sobre-estrabismo.html
+++ b/sobre-estrabismo.html
@@ -110,8 +110,7 @@
             <a href="/rifa-miguel/index.html" class="nav-button">Início</a>
             <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
             <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Sobre o Estrabismo</a>
-            <a href="/rifa-miguel/numero-premiado.html" class="nav-button">Número Premiado</a>
-            <a href="javascript:void(0)" onclick="checkPassword()" class="nav-button">Sorteio</a>
+            <a href="/rifa-miguel/orcamento.html" class="nav-button">Orçamento</a>
         </nav>
     </header>
 
@@ -166,16 +165,5 @@
         <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Conheça%20a%20causa%20do%20Miguel%20e%20ajude%20na%20rifa%20solidária!%20Saiba%20mais%20sobre%20o%20estrabismo%20e%20participe:%20https://ederamorimth.github.io/rifa-miguel/sobre-estrabismo.html%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
         <p>© 2025 Rifa Solidária para o Miguel</p>
     </footer>
-
-    <script>
-        function checkPassword() {
-            const password = prompt("Digite a senha para acessar a página de sorteio:");
-            if (password === "VAIDACERTO") {
-                window.location.href = "/rifa-miguel/sorteio.html";
-            } else {
-                alert("Senha incorreta!");
-            }
-        }
-    </script>
 </body>
 </html>
