--- a/sorteio.html
+++ b/sorteio.html
@@ -18,6 +18,7 @@
             padding: 10px 20px;
             text-align: center;
         }
+        nav a {
         nav {
             display: flex;
             flex-wrap: wrap;
@@ -28,6 +29,7 @@
         .nav-button {
             background-color: #0056b3;
             color: white;
+            margin: 0 15px;
             padding: 6px 12px;
             border-radius: 5px;
             text-decoration: none;
@@ -45,90 +47,7 @@
         }
         .content {
             max-width: 1000px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #007bff;
-            color: white;
-        }
-        .error {
-            color: red;
-            text-align: center;
-            margin: 20px 0;
-        }
-        .no-data {
-            text-align: center;
-            color: #555;
-            margin: 20px 0;
-        }
-        .draw-section {
-            margin: 20px 0;
-            text-align: center;
-        }
-        .draw-button {
-            background-color: #ffc107;
-            color: black;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-        .draw-button:hover {
-            background-color: #e0a800;
-        }
-        .view-phone-button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background-color 0.3s;
-        }
-        .view-phone-button:hover {
-            background-color: #0056b3;
-        }
-        .winner {
-            background-color: #e7f3ff;
-            padding: 20px;
-            border-left: 4px solid #007bff;
-            margin: 20px 0;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-        }
-        .share-button {
-            background-color: #25d366;
-            color: white;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            display: inline-block;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
+@@ -112,200 +132,212 @@
         .share-button:hover {
             background-color: #1ebe5a;
         }
@@ -149,6 +68,12 @@
     <header>
         <h1>Rifa Solidária para o Miguel</h1>
         <nav>
+            <a href="/rifa-miguel/index.html">Início</a>
+            <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
+            <a href="/rifa-miguel/sobre-estrabismo.html">Sobre o Estrabismo</a>
+            <a href="#contato">Contato</a>
+            <a href="/rifa-miguel/sorteio.html">Sorteio</a>
+            <a href="/rifa-miguel/sorteio-ao-vivo.html">Sorteio ao Vivo</a>
             <a href="/rifa-miguel/index.html" class="nav-button">Início</a>
             <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
             <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Sobre o Estrabismo</a>
