--- a/sorteio.html
+++ b/sorteio.html
@@ -19,48 +19,98 @@
             text-align: center;
         }
         nav a {
-        nav {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 8px;
-            padding: 10px 0;
-        }
-        .nav-button {
-            background-color: #0056b3;
             color: white;
             margin: 0 15px;
-            padding: 6px 12px;
-            border-radius: 5px;
             text-decoration: none;
-            font-size: 1em;
-            font-weight: bold;
-            letter-spacing: 1px;
-            transition: background-color 0.3s, color 0.3s;
-            flex: 1 1 auto;
-            text-align: center;
-            min-width: 100px;
-        }
-        .nav-button:hover {
-            background-color: #ffc107;
-            color: black;
         }
         .content {
             max-width: 1000px;
-@@ -112,200 +132,212 @@
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #007bff;
+            color: white;
+        }
+        .error {
+            color: red;
+            text-align: center;
+            margin: 20px 0;
+        }
+        .no-data {
+            text-align: center;
+            color: #555;
+            margin: 20px 0;
+        }
+        .draw-section {
+            margin: 20px 0;
+            text-align: center;
+        }
+        .draw-button {
+            background-color: #ffc107;
+            color: black;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+        .draw-button:hover {
+            background-color: #e0a800;
+        }
+        .view-phone-button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+        .view-phone-button:hover {
+            background-color: #0056b3;
+        }
+        .winner {
+            background-color: #e7f3ff;
+            padding: 20px;
+            border-left: 4px solid #007bff;
+            margin: 20px 0;
+            text-align: center;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+        .share-button {
+            background-color: #25d366;
+            color: white;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            display: inline-block;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
         .share-button:hover {
             background-color: #1ebe5a;
-        }
-        @media (max-width: 600px) {
-            nav {
-                flex-direction: column;
-                align-items: center;
-            }
-            .nav-button {
-                width: 80%;
-                padding: 8px;
-                font-size: 0.9em;
-            }
         }
     </style>
 </head>
@@ -74,13 +124,6 @@
             <a href="#contato">Contato</a>
             <a href="/rifa-miguel/sorteio.html">Sorteio</a>
             <a href="/rifa-miguel/sorteio-ao-vivo.html">Sorteio ao Vivo</a>
-            <a href="/rifa-miguel/index.html" class="nav-button">Início</a>
-            <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
-            <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Sobre o Estrabismo</a>
-            <a href="/rifa-miguel/numero-premiado.html" class="nav-button">Número Premiado</a>
-            <a href="/rifa-miguel/sorteio.html" class="nav-button">Sorteio</a>
-            <a href="/rifa-miguel/sorteio-ao-vivo.html" class="nav-button">Sorteio ao Vivo</a>
-            <a href="#contato" class="nav-button">Contato</a>
         </nav>
     </header>
 
