--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
             <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Estrabismo</a>
             <a href="/rifa-miguel/orcamento.html" class="nav-button">Orçamento</a>
-            <a href="https://rifa-miguel.onrender.com/sorteio" class="nav-button">Sorteio</a>
+            <a href="https://ederamorimth.github.io/rifa-miguel/sorteio.html" class="nav-button">Sorteio</a>
         </nav>
     </header>
 
@@ -314,7 +314,7 @@
                 const response = await fetch('https://rifa-miguel.onrender.com/reserve_numbers', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ numbers, userId: localStorage.getItem('userId') || generateUserId(), expiry: 5 * 60 * 1000 })
+                    body: JSON.stringify({ numbers, userId: localStorage.getItem('userId') || generateUserId() })
                 });
                 if (!response.ok) {
                     const errorData = await response.json();
@@ -352,7 +352,7 @@
                     throw new Error(`Erro HTTP ${availableRes.status}: ${errorData.error || 'Erro desconhecido'}`);
                 }
                 const availableNumbers = await availableRes.json();
-                console.log(`[${new Date().toISOString()}] Números disponíveis: ${availableNumbers.length} números`, availableNumbers);
+                console.log(`[${new Date().toISOString()}] Números disponíveis: ${availableNumbers.length} números`);
 
                 selectedNumbers.forEach(num => {
                     const numDiv = Array.from(numberContainer.children).find(div => div.textContent === num);
@@ -435,7 +435,7 @@
                         throw new Error(`Erro HTTP ${availableRes.status}: ${errorData.error || 'Erro ao carregar números disponíveis'}`);
                     }
                     const availableNumbers = await availableRes.json();
-                    console.log(`[${new Date().toISOString()}] Números disponíveis recebidos: ${availableNumbers.length} números`, availableNumbers);
+                    console.log(`[${new Date().toISOString()}] Números disponíveis recebidos: ${availableNumbers.length} números`);
 
                     numberContainer.innerHTML = '';
                     if (availableNumbers.length === 0) {
@@ -521,7 +521,7 @@
                     }
                     return;
                 } catch (error) {
-                    console.error(`Erro na tentativa ${retries + 1} em ${new Date().toISOString()}:`, error.message, 'Stack:', error.stack, 'Code:', error.code);
+                    console.error(`Erro na tentativa ${retries + 1} em ${new Date().toISOString()}:`, error.message);
                     retries++;
                     if (retries === maxRetries) {
                         showError(`Erro ao conectar ao servidor após várias tentativas: ${error.message}. Tente novamente ou contate o suporte (<a href="https://wa.me/65984739520">Evelyn: +65 98473-9520</a> ou <a href="https://wa.me/65999731992">Eder: +65 99973-1992</a>).`);
